--- a/cereals-network-article.Rmd
+++ b/cereals-network-article.Rmd
@@ -33,7 +33,7 @@ $^1$ National Socio-Environmental Synthesis Center (SESYNC), Annapolis, MD 21401
 
 $^2$ Department of Environmental Sciences, University of Virginia, Charlottesville, VA 22904, USA
 
-$^3$Institut Méditerranéen de Biodiversité et d’Ecologie Marine et Continentale (IMBE), F-13545 Aix-en-Provence cedex 04, France
+$^3$International Centre for Water Resources and Global Change (UNESCO), German Federal Institute of Hydrology, P.O. Box 200253, 56002 Koblenz, Germany
 
 $^4$Water and Development Research Group (WDRG), Aalto University, FI-00076 Aalto, Finland
 
@@ -51,7 +51,7 @@ $^9$Grantham Research Institute on Climate Change and the Environment, London Sc
 
 # Abstract
 
-While a growing proportion of global food consumption is obtained through international trade, there is an ongoing debate on whether this increased reliance on trade benefits or hinders food security, and specifically, the ability of global food systems to absorb shocks due to local or regional losses of production. This paper introduces a model that simulates the short-term response to a food supply shock originating in a single country, which is partly absorbed through domestic reserves and consumption, and partly transmitted through the adjustment of trade flows. By applying the model to publicly-available data for the cereals commodity group over a 17-year period, we find that differential outcomes of supply shocks simulated through this time period are driven not only by the intensification of trade, but as importantly by changes in the distribution of reserves. Our analysis also identifies countries where trade dependency may accentuate the risk of food shortages from foreign production shocks; such risk could be reduced by increasing domestic reserves or importing food from a diversity of suppliers that possess their own reserves. This simulation-based model provides a framework to study the short-term, non-linear and out-of-equilibrium response of trade networks to supply shocks, and could be applied to specific scenarios of environmental or economic perturbations.
+While a growing proportion of global food consumption is obtained through international trade, there is an ongoing debate on whether this increased reliance on trade benefits or hinders food security, and specifically, the ability of global food systems to absorb shocks due to local or regional losses of production. This paper introduces a model that simulates the short-term response to a food supply shock originating in a single country, which is partly absorbed through decreases in domestic reserves and consumption, and partly transmitted through the adjustment of trade flows. By applying the model to publicly-available data for the cereals commodity group over a 17-year period, we find that differential outcomes of supply shocks simulated through this time period are driven not only by the intensification of trade, but as importantly by changes in the distribution of reserves. Our analysis also identifies countries where trade dependency may accentuate the risk of food shortages from foreign production shocks; such risk could be reduced by increasing domestic reserves or importing food from a diversity of suppliers that possess their own reserves. This simulation-based model provides a framework to study the short-term, non-linear and out-of-equilibrium response of trade networks to supply shocks, and could be applied to specific scenarios of environmental or economic perturbations.
 
 \newpage
 
@@ -161,7 +161,7 @@ trade_RSscaled <- Map(
     }, trade_dat, S0)
 ```
 
-To separate the effects of changes in reserves and trade flows on model outcomes, we perform two different scalings of the 1996 and 2003 reserves: (1) in the $R$-scaled version, all countries' reserves are scaled by a common factor so that the ratio of global $R$ to global $P$ matches that of 2009 (e.g., from the table above, the global $R/P$ ratio is 0.262 in 1996 and 0.192 in 2009, so the 1996 $R$-scaling would multiply each country's reserves by 0.192/0.262); (2) in the $R/S$-scaled version, each country's reserves are adjusted so that the ratio of $R$ to the net supply $S$ matches that of 2009 for that country (e.g., the $R/S$ ratio for Australia in 2009 is 0.435, so its actual 1996 reserves would be replaced with 0.435 times its 1996 supply). Comparison between simulations based on the original data and results from these scaled versions allow us to identify the impact of (1) changes in global reserves or (2) changes in the distribution of these reserves among countries, respectively. 
+To separate the effects of changes in reserves and trade flows on model outcomes, we perform two different scalings of the 1996 and 2003 reserves: (1) in the $R$-scaled version, all countries' reserves are scaled by a common factor so that the ratio of global $R$ to global $P$ matches that of 2009 (e.g., from Table 2, the global $R/P$ ratio is 0.262 in 1996 and 0.192 in 2009, so the 1996 $R$-scaling would multiply each country's reserves by 0.192/0.262); (2) in the $R/S$-scaled version, each country's reserves are adjusted so that the ratio of $R$ to the net supply $S$ matches that of 2009 for that country (e.g., the $R/S$ ratio for Australia in 2009 is 0.435, so its actual 1996 reserves would be replaced with 0.435 times its 1996 supply). Comparison between simulations based on the original data and results from these scaled versions allow us to identify the impact of (1) changes in global reserves or (2) changes in the distribution of these reserves among countries, respectively. 
 
 
 ## Simulation parameters and response variables
@@ -254,7 +254,7 @@ We performed the simulations and all data processing steps in R [@r2015], using 
 
 ## Effects of global changes in the trade network
 
-To compare simulation results across different versions of the trade network, we fix the global simulation parameters to $f_p = 0.2$ (20% production decrease in the country initiating the shock), $f_r = 0.5$ (50% of reserves available to buffer shocks) and $f_c = 0.01$ (1% of residual shock absorbed by consumption before it is passed through trade). A sensitivity analysis of the simulation results to changes in these parameters can be found in the supplementary materials.
+To compare simulation results across different versions of the trade network, we fix the global simulation parameters to $f_p = 0.2$ (20% production decrease in the country initiating the shock), $f_r = 0.5$ (50% of reserves available to buffer shocks) and $f_c = 0.01$ (1% of residual shock absorbed by consumption before it is passed through trade). Our sensitivity analysis (in the supplementary materials) shows that the number of countries to which a shock spreads depends primarily on the ratio of $f_p$ to $f_r$, whereas the impact on domestic consumption is most affected by $f_p$ (Supplementary Table 1).
 
 Our simulation results indicate that the most recent trade network (2009) has a greater capacity to absorb shocks compared with those of 1996 and 2003, as evidenced by a decrease in hits by country ($N_{h}$, $N_{hc}$) and a lesser impact on consumption ($\Delta c_{rel}$) (Table \ref{tab:Rscal_stat}). However, this pattern is largely driven by the distribution of reserves rather than increased trade. Despite the total reserves being greater in 1996 and 2003 -- which explains why the impact metrics are even higher when scaling these total reserves to 2009 levels -- they are less evenly distributed, with a few countries (such as China) holding a very large proportion of their net supply in reserve and more countries having no reported reserves. By scaling relative reserves by country to their 2009 values ($R/S$-scaling), we see that the number of hits by country monotonically increases over time, with a small increase in the mean evenness of the impact across simulations, all factors consistent with an increase of the number and volume of trade connections.
 
@@ -330,7 +330,7 @@ ds_dc$version <- factor(ds_dc$version, levels = plot_params,
 world_ds_dc <- inner_join(world_df, ds_dc)
 ```
 
-```{r ds_map, fig.width = 7, fig.height = 10, fig.cap = "\\label{fig:ds_map}Total change in net supply ($\\sum \\Delta S$, summed over simulated shocks starting from each country) as a fraction of the affected country's initial supply ($S_0$), for three versions of the input data. The middle panel ($R/S$-scaled) uses the 1996 production and trade data, but scales the reserves to match the 2009 reserves/supply ratio. Global simulation parameters (see Table \\ref{tab:var_list}) are set at $f_p$ = 0.2, $f_r$ = 0.5 and $f_c$ = 0.01."}
+```{r ds_map, fig.width = 7, fig.height = 10, fig.cap = "\\label{fig:ds_map}Total change in net supply ($\\sum \\Delta S$, summed over independent simulations of shocks initiated at each country) as a fraction of the affected country's initial supply ($S_0$), for three versions of the input data. The middle panel ($R/S$-scaled) uses the 1996 production and trade data, but scales the reserves to match the 2009 reserves/supply ratio. Global simulation parameters (see Table \\ref{tab:var_list}) are set at $f_p$ = 0.2, $f_r$ = 0.5 and $f_c$ = 0.01."}
 ggplot() + geom_polygon(aes(long, lat, group = group, fill = tot_dS_S0),
                                  data = world_ds_dc, colour = "grey", size = 0.25) +
     scale_fill_gradient(low = "red", high = "white", na.value = "grey") +
@@ -338,7 +338,7 @@ ggplot() + geom_polygon(aes(long, lat, group = group, fill = tot_dS_S0),
     facet_wrap(~ version, ncol = 1) + coord_fixed() + theme_map()
 ```
 
-```{r dc_map, fig.width = 7, fig.height = 10, fig.cap = "\\label{fig:dc_map}Total change in domestic consumption ($\\sum \\Delta C$, summed over simulated shocks starting from each country) as a fraction of the affected country's initial supply ($S_0$), for three versions of the input data. The middle panel ($R/S$-scaled) uses the 1996 production and trade data, but scales the reserves to match the 2009 reserves/supply ratio. Global simulation parameters (see Table \\ref{tab:var_list}) are set at $f_p$ = 0.2, $f_r$ = 0.5 and $f_c$ = 0.01."}
+```{r dc_map, fig.width = 7, fig.height = 10, fig.cap = "\\label{fig:dc_map}Total change in domestic consumption ($\\sum \\Delta C$, summed over independent simulations of shocks initiated at each country) as a fraction of the affected country's initial supply ($S_0$), for three versions of the input data. The middle panel ($R/S$-scaled) uses the 1996 production and trade data, but scales the reserves to match the 2009 reserves/supply ratio. Global simulation parameters (see Table \\ref{tab:var_list}) are set at $f_p$ = 0.2, $f_r$ = 0.5 and $f_c$ = 0.01."}
 ggplot() + geom_polygon(aes(long, lat, group = group, fill = tot_dC_S0),
                                  data = world_ds_dc, colour = "grey", size = 0.25) +
     scale_fill_gradient(low = "red", high = "white", na.value = "grey") +
@@ -348,7 +348,7 @@ ggplot() + geom_polygon(aes(long, lat, group = group, fill = tot_dC_S0),
 
 Figures \ref{fig:ds_map} and \ref{fig:dc_map} present the total impact on the supply and consumption (respectively) of each country for three different model runs: original 1996 data, 1996 data scaled with $R/S$ ratios from 2009, and original 2009 data. Once again, results are aggregated over simulated shocks initiated at each country. As stated in the previous section, major exporters tend to absorb a disproportionate share of shocks relative to their base supply (Fig. \ref{fig:ds_map}), due to their large reserves and high number of trade links. However, these large reserves also ensure that the impact on domestic consumption is negligible (Fig. \ref{fig:dc_map}). The larger impact on $\Delta S$ for Argentina, Australia and Paraguay in 2009 (Fig. \ref{fig:ds_map}) reflects the growing relative importance of their exports. Some countries with low production and high trade can also exhibit a high aggregate $\Delta S$, such as Oman, which increased both its reserves and trade volume between 1996 and 2009.
 
-Countries where the simulated shocks produce substantial decreases in domestic consumption are concentrated in a few regions: Central America, the Sahel and East Africa, South and South-East Asia and (in 1996 only) the former Soviet Union (Fig. \ref{fig:dc_map}). Compared with the original 1996 data, simulations using the $R/S$-scaled reserves led to smaller impacts to consumption overall. Changes in the trade network itself greatly reduced the $\Delta C$ impact on many countries, including most of the former Soviet Union, Afghanistan, Sudan and Tanzania, but led to larger impacts in others, notably in Central America. 
+Countries where the simulated shocks produce substantial decreases in domestic consumption are concentrated in a few regions: Central America, the Sahel and East Africa, South and South-East Asia and (in 1996 only) the former Soviet Union (Fig. \ref{fig:dc_map}). The set of most affected countries is not sensitive to variation of the global simulation parameters $f_p$, $f_r$ and $f_c$ (Supplementary Table 2). Compared with the original 1996 data, simulations using the $R/S$-scaled reserves led to smaller impacts to consumption overall. Changes in the trade network itself greatly reduced the $\Delta C$ impact on many countries, including most of the former Soviet Union, Afghanistan, Sudan and Tanzania, but led to larger impacts in others, notably in Central America. 
 
 ```{r dc_prep}
 # Extract dC related stats for countries where dC/S0 < -1% in at least one sim 
@@ -479,18 +479,18 @@ Based on data for a specific commodity group -- cereals and cereal products -- s
 
 Since we simulated independent production shocks of the same relative size originating in each country, our aggregated results do not account for variation in the probability of production shocks across countries, or for the possibility of simultaneous shocks in multiple countries. The latter is of particular significance as, according to our analysis, the countries most at risk of food shortages from external shocks tend to be concentrated in regional blocks. Further research on this topic could thus focus on developing more realistic shock scenarios where the impact is distributed across a region.
 
-By focusing on the impact of global reserve distribution and trade network structure, we necessarily ignore the particulars of each country's domestic policies and trade agreements that may affect the national reponse to food supply shocks. While our results indicate the relative vulnerabilities of countries along the dimensions considered in the model, this analysis alone cannot serve as an assessment of the actual level of food security in each country.
+By focusing on the impact of global reserve distribution and trade network structure, we necessarily ignore the particulars of each country's domestic policies and trade agreements that may affect the national response to food supply shocks. While our results indicate the relative vulnerabilities of countries along the dimensions considered in the model, this analysis alone cannot serve as an assessment of the actual level of food security in each country.
 
 To avoid introducing too many adjustable parameters, we chose a parsimonious model of the agents' (in this case, national economies) behavior: all countries are willing to spend the same proportion of their reserves, and any shock transmitted to trade partners is partitioned equally among all trade links. The latter assumption is shared with other models of "contagion" in economic networks [e.g., @lee2011]. A few recent models of shock propagation in food commodity networks [@puma2015; @gephart2016] use a GDP-weighted partitioning, based on the assumption that countries with a higher purchasing power will have a greater ability to sustain their imports from production-stressed countries. A key challenge in the development and parametrization of more complex model versions is the coarse, aggregate nature of available production and trade data, which limits our ability to follow the propagation of individual shocks in the empirical record.
 
 We can contrast our simulation-based approach with previous studies aimed at evaluating the global food trade network's resilience to supply shocks. Using an aggregated virtual water trade network, @sartori2015 analyzed the distribution of historical supply shocks as well as changes in the network structure over time, to support the thesis that the global food supply became more stable as the reliance of trade increased. However, the data alone does not suffice to isolate the effect of increased trade from that of other trends present in the historical record, such as a change in the distribution of food reserves. Our model not only differentiates the effect of these two trends, it also highlights the uneven impact of these changes among the most vulnerable countries, showing how relative risks may shift from one region to another.
 
-By shedding light on the complex interactions that determine the link between trade and food security, our model also suggests different paths through which national economies can reduce the risk of food shortages, such as diversifying the sources of staple food supplies and ensuring that trading partners have the reserves to withstand a shock. We recognize however that these country-level metrics constitute only one dimension of food security, and that a more complete assessment requires consideration of within-country inequality in income, nutrition and access to food. Furthermore, while patterns of trade-dependency can be studied within the context of specific food commodity networks, their origin is intrinsically linked to larger socio-environmental problems, including differences in access to water or land, and the geographical distribution of pollution and other environmental externalities.
+By shedding light on the complex interactions that determine the link between trade and food security, our model also suggests different paths through which national economies can reduce the risk of food shortages, such as diversifying the sources of staple food supplies and ensuring that trading partners have the reserves to withstand a shock. We recognize however that these country-level metrics constitute only one dimension of food security, and that a more complete assessment requires consideration of within-country inequality in income, nutrition and access to food. Furthermore, while patterns of trade-dependency can be studied within the context of specific food commodity networks, their origin is intrinsically linked to larger socio-environmental issues, including differences in access to water or land, the intensity of their use [@fader2016], and the geographical distribution of pollution and other environmental externalities.
 
 
 # Acknowledgments
 
-We thank Roberto Patricio Korzeniewicz and Christina Prell for their participation in early discussions on this project. This work was supported by the National Socio-Environmental Synthesis Center (SESYNC) under funding received from the National Science Foundation grant DBI-1052875. M.J. Puma is supported by a fellowship from the Columbia University Center for Climate and Life and the Interdisciplinary Global Change Research under NASA cooperative agreement NNX08AJ75A, and D.A. Seekell was supported by the Carl Trygger Foundation for Scientific Research.
+We thank Roberto Patricio Korzeniewicz and Christina Prell for their participation in early discussions on this project. This work was supported by the National Socio-Environmental Synthesis Center (SESYNC) under funding received from the National Science Foundation (NSF) grant DBI-1052875. M.J. Puma is supported by a fellowship from the Columbia University Center for Climate and Life and the Interdisciplinary Global Change Research under NASA cooperative agreement NNX08AJ75A. D.A. Seekell was supported by the Carl Trygger Foundation for Scientific Research. Z. Ratajczak received support from NSF grant DBI-1402033. A. Tavoni is supported by the Centre for Climate Change Economics and Policy, funded by the ESRC, and the Grantham Foundation for the Protection of the Environment.
 
 
 # References
