--- a/ref.bib
+++ b/ref.bib
@@ -101,6 +101,18 @@
   doi={10.1088/1748-9326/8/1/014046}
 }
 
+@article{fader2016,
+  title={Past and present biophysical redundancy of countries as a buffer to changes in food supply},
+  author={Fader, Marianela and Rulli, Maria Cristina and Carr, Joel and Dell’Angelo, Jampel and D’Odorico, Paolo and Gephart, Jessica A and Kummu, Matti and Magliocca, Nicholas and Porkka, Miina and Prell, Christina and Puma, Michael J and Ratajczak, Zak and Seekell, David A and Suweis, Samir and Tavoni, Alessandro},
+  journal={Environmental Research Letters},
+  volume={11},
+  number={5},
+  pages={055008},
+  year={2016},
+  publisher={IOP Publishing},
+  doi={10.1088/1748-9326/11/5/055008}
+}
+
 @manual{fao2001,
   title={Food balance sheets: A handbook},
   author={FAO},
